(copy_files ../*.*)
(alias (name ptests)
  (deps (alias ptests_config)))
; TEST FILE "tmon_b.c"
(alias (name "tmon_b.wtests")
  (deps (alias "tmon_b.0.exec.wtests"))) ; to performs all sub-tests related to a file
(alias (name "tmon_b.c")
  (deps (alias "tmon_b.0.exec"))) ; to reproduce and visualize the all sub-test outputs related to a file
(rule ; TEST #0 OF TEST FILE tests/isola2026/tmon_b.c
  (alias "tmon_b.0.exec.wtests")
  (targets "tmon_b.err.log" "tmon_b.res.log"  )
  (deps "tmon_b.0.exec.wtests" "../oracle/tmon_b.res.oracle" "../oracle/tmon_b.err.oracle"  "tmon_b.c"  "utils.h" "sensors.h" "warnings.h" "tmon.is" (package frama-c)  (package "frama-c-vernfr") (package "frama-c-wp") )
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (run frama-c-wtests -brief "tmon_b.0.exec.wtests" "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jamilon/Documents/vernfr/_build/default:.\" -load-plugin=vernfr,wp    tmon_b.c  -vernfr -keep-unused-functions \"all\" -keep-unused-types -nfr-ispec tmon.is -nfr-check-calls -nfr-fun-ptrs -nfr-no-fun-defs -nfr-all-entries-defined -nfr-only-entries -nfr-static-vars -nfr-proper-init -nfr-check-ptr-literals -nfr-typedefs > \"tmon_b.res.log\" 2> \"tmon_b.err.log\"" ))
)
(rule ; REPRODUCE TEST #0 OF TEST FILE "tmon_b.c"
  (alias "tmon_b.0.exec")
  (deps  "tmon_b.c"  "utils.h" "sensors.h" "warnings.h" "tmon.is" (package frama-c)  (package "frama-c-vernfr") (package "frama-c-wp")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (with-accepted-exit-codes 0 (system "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jamilon/Documents/vernfr/_build/default:.\" -load-plugin=vernfr,wp    tmon_b.c  -vernfr -keep-unused-functions \"all\" -keep-unused-types -nfr-ispec tmon.is -nfr-check-calls -nfr-fun-ptrs -nfr-no-fun-defs -nfr-all-entries-defined -nfr-only-entries -nfr-static-vars -nfr-proper-init -nfr-check-ptr-literals -nfr-typedefs")))
)
(rule ; SHOW TEST COMMAND #0 OF TEST FILE "tmon_b.c"
  (alias "tmon_b.0.exec.show")
  (deps  "tmon_b.c"  "utils.h" "sensors.h" "warnings.h" "tmon.is" (package frama-c)  (package "frama-c-vernfr") (package "frama-c-wp")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (system "echo 'frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jamilon/Documents/vernfr/_build/default:.\" -load-plugin=vernfr,wp    tmon_b.c  -vernfr -keep-unused-functions \"all\" -keep-unused-types -nfr-ispec tmon.is -nfr-check-calls -nfr-fun-ptrs -nfr-no-fun-defs -nfr-all-entries-defined -nfr-only-entries -nfr-static-vars -nfr-proper-init -nfr-check-ptr-literals -nfr-typedefs > \"tmon_b.res.log\" 2> \"tmon_b.err.log\"'"))
)
(rule
  (alias "tmon_b.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (diff "../oracle/tmon_b.res.oracle" "tmon_b.res.log"))
)
(rule
  (alias "tmon_b.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (diff "../oracle/tmon_b.err.oracle" "tmon_b.err.log"))
)
(alias (name "tmon_b.diff")
  (deps (alias "tmon_b.0.exec.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
)
(alias (name "ptests_config")
  (deps (alias "tmon_b.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
)
; TEST FILE "tmon_a.c"
(alias (name "tmon_a.wtests")
  (deps (alias "tmon_a.0.exec.wtests"))) ; to performs all sub-tests related to a file
(alias (name "tmon_a.c")
  (deps (alias "tmon_a.0.exec"))) ; to reproduce and visualize the all sub-test outputs related to a file
(rule ; TEST #0 OF TEST FILE tests/isola2026/tmon_a.c
  (alias "tmon_a.0.exec.wtests")
  (targets "tmon_a.err.log" "tmon_a.res.log"  )
  (deps "tmon_a.0.exec.wtests" "../oracle/tmon_a.res.oracle" "../oracle/tmon_a.err.oracle"  "tmon_a.c"  "utils.h" "sensors.h" "warnings.h" "tmon.is" (package frama-c)  (package "frama-c-vernfr") (package "frama-c-wp") )
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (run frama-c-wtests -brief "tmon_a.0.exec.wtests" "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jamilon/Documents/vernfr/_build/default:.\" -load-plugin=vernfr,wp    tmon_a.c  -vernfr -keep-unused-functions \"all\" -keep-unused-types -nfr-ispec tmon.is -nfr-check-calls -nfr-fun-ptrs -nfr-no-fun-defs -nfr-all-entries-defined -nfr-only-entries -nfr-static-vars -nfr-proper-init -nfr-check-ptr-literals -nfr-typedefs > \"tmon_a.res.log\" 2> \"tmon_a.err.log\"" ))
)
(rule ; REPRODUCE TEST #0 OF TEST FILE "tmon_a.c"
  (alias "tmon_a.0.exec")
  (deps  "tmon_a.c"  "utils.h" "sensors.h" "warnings.h" "tmon.is" (package frama-c)  (package "frama-c-vernfr") (package "frama-c-wp")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (with-accepted-exit-codes 0 (system "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jamilon/Documents/vernfr/_build/default:.\" -load-plugin=vernfr,wp    tmon_a.c  -vernfr -keep-unused-functions \"all\" -keep-unused-types -nfr-ispec tmon.is -nfr-check-calls -nfr-fun-ptrs -nfr-no-fun-defs -nfr-all-entries-defined -nfr-only-entries -nfr-static-vars -nfr-proper-init -nfr-check-ptr-literals -nfr-typedefs")))
)
(rule ; SHOW TEST COMMAND #0 OF TEST FILE "tmon_a.c"
  (alias "tmon_a.0.exec.show")
  (deps  "tmon_a.c"  "utils.h" "sensors.h" "warnings.h" "tmon.is" (package frama-c)  (package "frama-c-vernfr") (package "frama-c-wp")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (system "echo 'frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jamilon/Documents/vernfr/_build/default:.\" -load-plugin=vernfr,wp    tmon_a.c  -vernfr -keep-unused-functions \"all\" -keep-unused-types -nfr-ispec tmon.is -nfr-check-calls -nfr-fun-ptrs -nfr-no-fun-defs -nfr-all-entries-defined -nfr-only-entries -nfr-static-vars -nfr-proper-init -nfr-check-ptr-literals -nfr-typedefs > \"tmon_a.res.log\" 2> \"tmon_a.err.log\"'"))
)
(rule
  (alias "tmon_a.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (diff "../oracle/tmon_a.res.oracle" "tmon_a.res.log"))
)
(rule
  (alias "tmon_a.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (diff "../oracle/tmon_a.err.oracle" "tmon_a.err.log"))
)
(alias (name "tmon_a.diff")
  (deps (alias "tmon_a.0.exec.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
)
(alias (name "ptests_config")
  (deps (alias "tmon_a.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
)
; TEST FILE "utils.c"
(alias (name "utils.wtests")
  (deps (alias "utils.0.exec.wtests"))) ; to performs all sub-tests related to a file
(alias (name "utils.c")
  (deps (alias "utils.0.exec"))) ; to reproduce and visualize the all sub-test outputs related to a file
(rule ; TEST #0 OF TEST FILE tests/isola2026/utils.c
  (alias "utils.0.exec.wtests")
  (targets "utils.err.unfiltered-log" "utils.res.unfiltered-log"  )
  (deps "utils.0.exec.wtests" "../oracle/utils.res.oracle" "../oracle/utils.err.oracle"  "utils.c"  (package frama-c)  (package "frama-c-vernfr") (package "frama-c-wp") )
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (run frama-c-wtests -brief "utils.0.exec.wtests" "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jamilon/Documents/vernfr/_build/default:.\" -load-plugin=vernfr,wp    utils.c -wp -wp-rte > \"utils.res.unfiltered-log\" 2> \"utils.err.unfiltered-log\""  "cat utils.res.unfiltered-log | sed -E 's/\\([0-9]+ms(-[0-9]+ms)*\\)//g' > \"utils.res.log\"" "cat utils.err.unfiltered-log | sed -E 's/\\([0-9]+ms(-[0-9]+ms)*\\)//g' > \"utils.err.log\""))
)
(rule ; FILTER RES #0 OF TEST FILE "utils.c"
  (deps "utils.res.unfiltered-log")
         (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (with-stdout-to "utils.res.log" (with-accepted-exit-codes (or 0 1 2 125) (system "cat utils.res.unfiltered-log | sed -E 's/\\([0-9]+ms(-[0-9]+ms)*\\)//g'"))))
)
(rule ; FILTER ERR #0 OF TEST FILE "utils.c"
  (deps "utils.err.unfiltered-log")
         (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (with-stdout-to "utils.err.log" (with-accepted-exit-codes (or 0 1 2 125) (system "cat utils.err.unfiltered-log | sed -E 's/\\([0-9]+ms(-[0-9]+ms)*\\)//g'"))))
)
(rule ; REPRODUCE TEST #0 OF TEST FILE "utils.c"
  (alias "utils.0.exec")
  (deps  "utils.c"  (package frama-c)  (package "frama-c-vernfr") (package "frama-c-wp")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (with-accepted-exit-codes 0 (system "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jamilon/Documents/vernfr/_build/default:.\" -load-plugin=vernfr,wp    utils.c -wp -wp-rte")))
)
(rule ; SHOW TEST COMMAND #0 OF TEST FILE "utils.c"
  (alias "utils.0.exec.show")
  (deps  "utils.c"  (package frama-c)  (package "frama-c-vernfr") (package "frama-c-wp")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (system "echo 'frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jamilon/Documents/vernfr/_build/default:.\" -load-plugin=vernfr,wp    utils.c -wp -wp-rte > \"utils.res.unfiltered-log\" 2> \"utils.err.unfiltered-log\"'"))
)
(rule
  (alias "utils.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (diff "../oracle/utils.res.oracle" "utils.res.log"))
)
(rule
  (alias "utils.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (diff "../oracle/utils.err.oracle" "utils.err.log"))
)
(alias (name "utils.diff")
  (deps (alias "utils.0.exec.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
)
(alias (name "ptests_config")
  (deps (alias "utils.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
)
(alias (name disabled_ptests)
  (deps (alias disabled_ptests_config)))
(alias (name ptests)
  (deps (alias disabled_ptests)))
(alias (name ptests_config)
  (deps (alias disabled_ptests_config)))
(rule ; Warns when some test conditions are disabled
  (alias disabled_ptests_config)
  (deps (universe))
  (enabled_if (or false  (not %{lib-available:frama-c-vernfr.core}) (not %{lib-available:frama-c-wp.core})))
  (action (progn (echo "WARNING: Enabling conditions of some tests are false for @tests/isola2026/ptests_config\n")
                 (echo "- \%{lib-available:frama-c-vernfr.core}: " %{lib-available:frama-c-vernfr.core} "\n")
                 (echo "- \%{lib-available:frama-c-wp.core}: " %{lib-available:frama-c-wp.core} "\n")
  ))
)

