(copy_files ../*.*)
(alias (name ptests)
  (deps (alias ptests_config)))
; TEST FILE "ptrliteral_f.c"
(alias (name "ptrliteral_f.wtests")
  (deps (alias "ptrliteral_f.0.exec.wtests"))) ; to performs all sub-tests related to a file
(alias (name "ptrliteral_f.c")
  (deps (alias "ptrliteral_f.0.exec"))) ; to reproduce and visualize the all sub-test outputs related to a file
(rule ; TEST #0 OF TEST FILE tests/ptrliteral/ptrliteral_f.c
  (alias "ptrliteral_f.0.exec.wtests")
  (targets "ptrliteral_f.err.log" "ptrliteral_f.res.log"  )
  (deps "ptrliteral_f.0.exec.wtests" "../oracle/ptrliteral_f.res.oracle" "../oracle/ptrliteral_f.err.oracle"  "ptrliteral_f.c"  (package frama-c)  (package "frama-c-vernfr") )
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (run frama-c-wtests -brief "ptrliteral_f.0.exec.wtests" "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    ptrliteral_f.c -vernfr -nfr-check-ptr-literals > \"ptrliteral_f.res.log\" 2> \"ptrliteral_f.err.log\"" ))
)
(rule ; REPRODUCE TEST #0 OF TEST FILE "ptrliteral_f.c"
  (alias "ptrliteral_f.0.exec")
  (deps  "ptrliteral_f.c"  (package frama-c)  (package "frama-c-vernfr")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (with-accepted-exit-codes 0 (system "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    ptrliteral_f.c -vernfr -nfr-check-ptr-literals")))
)
(rule ; SHOW TEST COMMAND #0 OF TEST FILE "ptrliteral_f.c"
  (alias "ptrliteral_f.0.exec.show")
  (deps  "ptrliteral_f.c"  (package frama-c)  (package "frama-c-vernfr")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (system "echo 'frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    ptrliteral_f.c -vernfr -nfr-check-ptr-literals > \"ptrliteral_f.res.log\" 2> \"ptrliteral_f.err.log\"'"))
)
(rule
  (alias "ptrliteral_f.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (diff "../oracle/ptrliteral_f.res.oracle" "ptrliteral_f.res.log"))
)
(rule
  (alias "ptrliteral_f.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (diff "../oracle/ptrliteral_f.err.oracle" "ptrliteral_f.err.log"))
)
(alias (name "ptrliteral_f.diff")
  (deps (alias "ptrliteral_f.0.exec.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
)
(alias (name "ptests_config")
  (deps (alias "ptrliteral_f.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
)
; TEST FILE "ptrliteral.c"
(alias (name "ptrliteral.wtests")
  (deps (alias "ptrliteral.0.exec.wtests"))) ; to performs all sub-tests related to a file
(alias (name "ptrliteral.c")
  (deps (alias "ptrliteral.0.exec"))) ; to reproduce and visualize the all sub-test outputs related to a file
(rule ; TEST #0 OF TEST FILE tests/ptrliteral/ptrliteral.c
  (alias "ptrliteral.0.exec.wtests")
  (targets "ptrliteral.err.log" "ptrliteral.res.log"  )
  (deps "ptrliteral.0.exec.wtests" "../oracle/ptrliteral.res.oracle" "../oracle/ptrliteral.err.oracle"  "ptrliteral.c"  (package frama-c)  (package "frama-c-vernfr") )
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (run frama-c-wtests -brief "ptrliteral.0.exec.wtests" "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    ptrliteral.c -vernfr -nfr-check-ptr-literals > \"ptrliteral.res.log\" 2> \"ptrliteral.err.log\"" ))
)
(rule ; REPRODUCE TEST #0 OF TEST FILE "ptrliteral.c"
  (alias "ptrliteral.0.exec")
  (deps  "ptrliteral.c"  (package frama-c)  (package "frama-c-vernfr")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (with-accepted-exit-codes 0 (system "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    ptrliteral.c -vernfr -nfr-check-ptr-literals")))
)
(rule ; SHOW TEST COMMAND #0 OF TEST FILE "ptrliteral.c"
  (alias "ptrliteral.0.exec.show")
  (deps  "ptrliteral.c"  (package frama-c)  (package "frama-c-vernfr")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (system "echo 'frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    ptrliteral.c -vernfr -nfr-check-ptr-literals > \"ptrliteral.res.log\" 2> \"ptrliteral.err.log\"'"))
)
(rule
  (alias "ptrliteral.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (diff "../oracle/ptrliteral.res.oracle" "ptrliteral.res.log"))
)
(rule
  (alias "ptrliteral.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (diff "../oracle/ptrliteral.err.oracle" "ptrliteral.err.log"))
)
(alias (name "ptrliteral.diff")
  (deps (alias "ptrliteral.0.exec.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
)
(alias (name "ptests_config")
  (deps (alias "ptrliteral.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
)
(alias (name disabled_ptests)
  (deps (alias disabled_ptests_config)))
(alias (name ptests)
  (deps (alias disabled_ptests)))
(alias (name ptests_config)
  (deps (alias disabled_ptests_config)))
(rule ; Warns when some test conditions are disabled
  (alias disabled_ptests_config)
  (deps (universe))
  (enabled_if (or false  (not %{lib-available:frama-c-vernfr.core})))
  (action (progn (echo "WARNING: Enabling conditions of some tests are false for @tests/ptrliteral/ptests_config\n")
                 (echo "- \%{lib-available:frama-c-vernfr.core}: " %{lib-available:frama-c-vernfr.core} "\n")
  ))
)

