(copy_files ../*.*)
(alias (name ptests)
  (deps (alias ptests_config)))
; TEST FILE "static_f.c"
(alias (name "static_f.wtests")
  (deps (alias "static_f.0.exec.wtests"))) ; to performs all sub-tests related to a file
(alias (name "static_f.c")
  (deps (alias "static_f.0.exec"))) ; to reproduce and visualize the all sub-test outputs related to a file
(rule ; TEST #0 OF TEST FILE tests/staticvars/static_f.c
  (alias "static_f.0.exec.wtests")
  (targets "static_f.err.log" "static_f.res.log"  )
  (deps "static_f.0.exec.wtests" "../oracle/static_f.res.oracle" "../oracle/static_f.err.oracle"  "static_f.c"  (package frama-c)  (package "frama-c-vernfr") )
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (run frama-c-wtests -brief "static_f.0.exec.wtests" "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    static_f.c -vernfr -nfr-static-vars > \"static_f.res.log\" 2> \"static_f.err.log\"" ))
)
(rule ; REPRODUCE TEST #0 OF TEST FILE "static_f.c"
  (alias "static_f.0.exec")
  (deps  "static_f.c"  (package frama-c)  (package "frama-c-vernfr")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (with-accepted-exit-codes 0 (system "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    static_f.c -vernfr -nfr-static-vars")))
)
(rule ; SHOW TEST COMMAND #0 OF TEST FILE "static_f.c"
  (alias "static_f.0.exec.show")
  (deps  "static_f.c"  (package frama-c)  (package "frama-c-vernfr")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (system "echo 'frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    static_f.c -vernfr -nfr-static-vars > \"static_f.res.log\" 2> \"static_f.err.log\"'"))
)
(rule
  (alias "static_f.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (diff "../oracle/static_f.res.oracle" "static_f.res.log"))
)
(rule
  (alias "static_f.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (diff "../oracle/static_f.err.oracle" "static_f.err.log"))
)
(alias (name "static_f.diff")
  (deps (alias "static_f.0.exec.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
)
(alias (name "ptests_config")
  (deps (alias "static_f.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
)
; TEST FILE "static.c"
(alias (name "static.wtests")
  (deps (alias "static.0.exec.wtests"))) ; to performs all sub-tests related to a file
(alias (name "static.c")
  (deps (alias "static.0.exec"))) ; to reproduce and visualize the all sub-test outputs related to a file
(rule ; TEST #0 OF TEST FILE tests/staticvars/static.c
  (alias "static.0.exec.wtests")
  (targets "static.err.log" "static.res.log"  )
  (deps "static.0.exec.wtests" "../oracle/static.res.oracle" "../oracle/static.err.oracle"  "static.c"  (package frama-c)  (package "frama-c-vernfr") )
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (run frama-c-wtests -brief "static.0.exec.wtests" "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    static.c -vernfr -nfr-static-vars > \"static.res.log\" 2> \"static.err.log\"" ))
)
(rule ; REPRODUCE TEST #0 OF TEST FILE "static.c"
  (alias "static.0.exec")
  (deps  "static.c"  (package frama-c)  (package "frama-c-vernfr")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (with-accepted-exit-codes 0 (system "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    static.c -vernfr -nfr-static-vars")))
)
(rule ; SHOW TEST COMMAND #0 OF TEST FILE "static.c"
  (alias "static.0.exec.show")
  (deps  "static.c"  (package frama-c)  (package "frama-c-vernfr")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (system "echo 'frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    static.c -vernfr -nfr-static-vars > \"static.res.log\" 2> \"static.err.log\"'"))
)
(rule
  (alias "static.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (diff "../oracle/static.res.oracle" "static.res.log"))
)
(rule
  (alias "static.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (diff "../oracle/static.err.oracle" "static.err.log"))
)
(alias (name "static.diff")
  (deps (alias "static.0.exec.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
)
(alias (name "ptests_config")
  (deps (alias "static.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
)
(alias (name disabled_ptests)
  (deps (alias disabled_ptests_config)))
(alias (name ptests)
  (deps (alias disabled_ptests)))
(alias (name ptests_config)
  (deps (alias disabled_ptests_config)))
(rule ; Warns when some test conditions are disabled
  (alias disabled_ptests_config)
  (deps (universe))
  (enabled_if (or false  (not %{lib-available:frama-c-vernfr.core})))
  (action (progn (echo "WARNING: Enabling conditions of some tests are false for @tests/staticvars/ptests_config\n")
                 (echo "- \%{lib-available:frama-c-vernfr.core}: " %{lib-available:frama-c-vernfr.core} "\n")
  ))
)

