(copy_files ../*.*)
(alias (name ptests)
  (deps (alias ptests_config)))
; TEST FILE "typedefs_f.c"
(alias (name "typedefs_f.wtests")
  (deps (alias "typedefs_f.0.exec.wtests"))) ; to performs all sub-tests related to a file
(alias (name "typedefs_f.c")
  (deps (alias "typedefs_f.0.exec"))) ; to reproduce and visualize the all sub-test outputs related to a file
(rule ; TEST #0 OF TEST FILE tests/typedefs/typedefs_f.c
  (alias "typedefs_f.0.exec.wtests")
  (targets "typedefs_f.err.log" "typedefs_f.res.log"  )
  (deps "typedefs_f.0.exec.wtests" "../oracle/typedefs_f.res.oracle" "../oracle/typedefs_f.err.oracle"  "typedefs_f.c"  (package frama-c)  (package "frama-c-vernfr") (package "frama-c-wp") )
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (run frama-c-wtests -brief "typedefs_f.0.exec.wtests" "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jamilon/Documents/vernfr/_build/default:.\" -load-plugin=vernfr,wp    typedefs_f.c -vernfr -nfr-typedefs > \"typedefs_f.res.log\" 2> \"typedefs_f.err.log\"" ))
)
(rule ; REPRODUCE TEST #0 OF TEST FILE "typedefs_f.c"
  (alias "typedefs_f.0.exec")
  (deps  "typedefs_f.c"  (package frama-c)  (package "frama-c-vernfr") (package "frama-c-wp")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (with-accepted-exit-codes 0 (system "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jamilon/Documents/vernfr/_build/default:.\" -load-plugin=vernfr,wp    typedefs_f.c -vernfr -nfr-typedefs")))
)
(rule ; SHOW TEST COMMAND #0 OF TEST FILE "typedefs_f.c"
  (alias "typedefs_f.0.exec.show")
  (deps  "typedefs_f.c"  (package frama-c)  (package "frama-c-vernfr") (package "frama-c-wp")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (system "echo 'frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jamilon/Documents/vernfr/_build/default:.\" -load-plugin=vernfr,wp    typedefs_f.c -vernfr -nfr-typedefs > \"typedefs_f.res.log\" 2> \"typedefs_f.err.log\"'"))
)
(rule
  (alias "typedefs_f.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (diff "../oracle/typedefs_f.res.oracle" "typedefs_f.res.log"))
)
(rule
  (alias "typedefs_f.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (diff "../oracle/typedefs_f.err.oracle" "typedefs_f.err.log"))
)
(alias (name "typedefs_f.diff")
  (deps (alias "typedefs_f.0.exec.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
)
(alias (name "ptests_config")
  (deps (alias "typedefs_f.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
)
; TEST FILE "typedefs.c"
(alias (name "typedefs.wtests")
  (deps (alias "typedefs.0.exec.wtests"))) ; to performs all sub-tests related to a file
(alias (name "typedefs.c")
  (deps (alias "typedefs.0.exec"))) ; to reproduce and visualize the all sub-test outputs related to a file
(rule ; TEST #0 OF TEST FILE tests/typedefs/typedefs.c
  (alias "typedefs.0.exec.wtests")
  (targets "typedefs.err.log" "typedefs.res.log"  )
  (deps "typedefs.0.exec.wtests" "../oracle/typedefs.res.oracle" "../oracle/typedefs.err.oracle"  "typedefs.c"  (package frama-c)  (package "frama-c-vernfr") (package "frama-c-wp") )
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (run frama-c-wtests -brief "typedefs.0.exec.wtests" "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jamilon/Documents/vernfr/_build/default:.\" -load-plugin=vernfr,wp    typedefs.c -vernfr -nfr-typedefs > \"typedefs.res.log\" 2> \"typedefs.err.log\"" ))
)
(rule ; REPRODUCE TEST #0 OF TEST FILE "typedefs.c"
  (alias "typedefs.0.exec")
  (deps  "typedefs.c"  (package frama-c)  (package "frama-c-vernfr") (package "frama-c-wp")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (with-accepted-exit-codes 0 (system "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jamilon/Documents/vernfr/_build/default:.\" -load-plugin=vernfr,wp    typedefs.c -vernfr -nfr-typedefs")))
)
(rule ; SHOW TEST COMMAND #0 OF TEST FILE "typedefs.c"
  (alias "typedefs.0.exec.show")
  (deps  "typedefs.c"  (package frama-c)  (package "frama-c-vernfr") (package "frama-c-wp")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (system "echo 'frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jamilon/Documents/vernfr/_build/default:.\" -load-plugin=vernfr,wp    typedefs.c -vernfr -nfr-typedefs > \"typedefs.res.log\" 2> \"typedefs.err.log\"'"))
)
(rule
  (alias "typedefs.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (diff "../oracle/typedefs.res.oracle" "typedefs.res.log"))
)
(rule
  (alias "typedefs.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (diff "../oracle/typedefs.err.oracle" "typedefs.err.log"))
)
(alias (name "typedefs.diff")
  (deps (alias "typedefs.0.exec.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
)
(alias (name "ptests_config")
  (deps (alias "typedefs.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
)
(alias (name disabled_ptests)
  (deps (alias disabled_ptests_config)))
(alias (name ptests)
  (deps (alias disabled_ptests)))
(alias (name ptests_config)
  (deps (alias disabled_ptests_config)))
(rule ; Warns when some test conditions are disabled
  (alias disabled_ptests_config)
  (deps (universe))
  (enabled_if (or false  (not %{lib-available:frama-c-vernfr.core}) (not %{lib-available:frama-c-wp.core})))
  (action (progn (echo "WARNING: Enabling conditions of some tests are false for @tests/typedefs/ptests_config\n")
                 (echo "- \%{lib-available:frama-c-vernfr.core}: " %{lib-available:frama-c-vernfr.core} "\n")
                 (echo "- \%{lib-available:frama-c-wp.core}: " %{lib-available:frama-c-wp.core} "\n")
  ))
)

